# JojiFrontier

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
data/: classes.json  regions.json  terrain_profiles.json  units.json  weapons.json
data/locales/: en.json  ja.json
docs/: README.md  balance_test_results.md  base_development.md  battle_message_box.md  battle_objects.md  battle_resolution_contract.md  battle_results_screen.md  battle_system.md  boss_common_rules.md  campaign_balance.md  campaign_regions.md  campaign_route_graph.md  cast_reference.md  character_progression.md  class_reference.md  combat_forecast.md  combat_resolution_order.md  counterattack_rules.md  defeat_and_retreat.md  enemy_ai_rules.md  expedition_flow.md  expedition_preparation_screen.md  expedition_recovery.md  expedition_rewards.md  exploration_system.md  facility_data_contract.md  facility_research.md  facility_ui.md  frontier_setting.md  gathering_place.md  implementation_roadmap.md  implementation_status.md  initial_skill_effects.md  inventory_overflow.md  item_catalog.md  item_system.md  localization.md  mission_objectives.md  region_mission_data_contract.md  region_unlocks.md  (+12 more)
docs/regions/: ashbough_forest.md  ashiron_quarry.md  blackwater_lowlands.md  buried_dawn_sanctum.md  cinderwatch_gate.md  ember_ravine.md  mapped_edge.md  old_frontier_settlement.md  shattered_march_fort.md  windscar_plateau.md
include/jf/battle/: AiSystem.hpp  BattleController.hpp  BattleEvents.hpp  BattleFactory.hpp  BattleObject.hpp  BattleObjectResolver.hpp  BattleState.hpp  BossRuntime.hpp  CombatResolver.hpp  EnemyAI.hpp  Movement.hpp  Objective.hpp  ObjectiveTracker.hpp  Phase.hpp  Reinforcement.hpp  SkillCharges.hpp  StatusEffects.hpp
include/jf/core/: BaseState.hpp  ExpeditionService.hpp  ExpeditionState.hpp  Exploration.hpp  Facilities.hpp  GameApp.hpp  Grid.hpp  Item.hpp  Locale.hpp  Region.hpp  RouteGraph.hpp  SaveSystem.hpp  Skill.hpp  Stats.hpp  StatusEffect.hpp  Terrain.hpp  TerrainProfile.hpp  Unit.hpp  UnitClass.hpp  UnitExitReason.hpp  Weapon.hpp
include/jf/data/: GameData.hpp
scripts/: check_world_bible.sh
src/: main.cpp  ui_base.cpp  ui_base.hpp  ui_battle.cpp  ui_battle.hpp  ui_camp.cpp  ui_camp.hpp  ui_deployment.cpp  ui_deployment.hpp  ui_exploration.cpp  ui_exploration.hpp  ui_facilities.cpp  ui_facilities.hpp  ui_overlays.cpp  ui_overlays.hpp  ui_shared.cpp  ui_shared.hpp
src/battle/: AiSystem.cpp  BattleController.cpp  BattleFactory.cpp  BattleObjectResolver.cpp  BattleState.cpp  CombatResolver.cpp  EnemyAI.cpp  Movement.cpp  Objective.cpp  ObjectiveTracker.cpp  Reinforcement.cpp  SkillCharges.cpp  StatusEffects.cpp
src/core/: ExpeditionService.cpp  GameApp.cpp  Item.cpp  Locale.cpp  Region.cpp  RouteGraph.cpp  SaveSystem.cpp  Skill.cpp  StatusEffect.cpp  Terrain.cpp  TerrainProfile.cpp  UnitClass.cpp
src/data/: GameData.cpp
tests/: test_battle.cpp  test_content.cpp  test_locale.cpp
tools/: check_localization.sh  class_duel.cpp  forest_balance.cpp
web/: idbfs.js
